--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,23 +26,18 @@ jobs:
       with:
         python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
         architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
-
+    - name: Install Dependencies
+      run: |
+        pip install -r requirements.txt 
     # Build python script into a stand-alone exe
     - uses: Nuitka/Nuitka-Action@main
       with:
         nuitka-version: main
         script-name: app.py
         onefile: true
-    # Uploads artifact
     - name: Upload Artifact
       uses: actions/upload-artifact@v3
       with:
         name: exe
         path: build/app.exe
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip
-#         pip install flake8 pytest
-#         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      
 
